Implmented basic reconciliation logic
Can now launch data layer and easily scale up number of shards with the kubernetes operator. Note that you cannot scale down as finalization logic and decision algorithms for killing shards has not yet been established. rbacs and persistent volumes must be manually provisioned

--- a/deploy/crds/scalog_v1alpha1_scalogservice_cr.yaml
+++ b/deploy/crds/scalog_v1alpha1_scalogservice_cr.yaml
@@ -2,6 +2,10 @@ apiVersion: scalog.io/v1alpha1
 kind: ScalogService
 metadata:
   name: example-scalogservice
+  namespace: scalog
 spec:
   # Add fields here
-  size: 3
+  numShards: 1
+  numDataReplica: 2
+  numMetadataReplica: 1
+  
