--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: scalog-operator
+  namespace: scalog
 spec:
   replicas: 1
   selector:
@@ -16,13 +17,14 @@ spec:
       containers:
         - name: scalog-operator
           # Replace this with the built image name
-          image: REPLACE_IMAGE
+          image: ops
+          imagePullPolicy: Never
           ports:
           - containerPort: 60000
             name: metrics
           command:
           - scalog-operator
-          imagePullPolicy: Always
+          # imagePullPolicy: Always
           env:
             - name: WATCH_NAMESPACE
               valueFrom:
