--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: scalog-operator
           # Replace this with the built image name
-          image: evantzhao/scalog:operator
+          image: scalog/scalog-operator:latest
           # imagePullPolicy: Never
           ports:
           - containerPort: 60000
