--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
   name: scalog-layer-rbac
-  namespace: "scalog"
+  namespace: scalog
   labels:
     app: scalog
 rules:
